tests/baselines/reference/stringLiteralsAssertionsInEqualityComparisons02.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralsAssertionsInEqualityComparisons02.ts(3,9): error TS2365: Operator '===' cannot be applied to types '"foo"' and '"baz"'.
tests/cases/conformance/types/stringLiteral/stringLiteralsAssertionsInEqualityComparisons02.ts(3,19): error TS2352: Type '"bar"' cannot be converted to type '"baz"'.
tests/cases/conformance/types/stringLiteral/stringLiteralsAssertionsInEqualityComparisons02.ts(4,20): error TS2352: Type '"bar"' cannot be converted to type '"foo"'.
tests/cases/conformance/types/stringLiteral/stringLiteralsAssertionsInEqualityComparisons02.ts(5,9): error TS2365: Operator '==' cannot be applied to types '"foo"' and 'number'.
tests/cases/conformance/types/stringLiteral/stringLiteralsAssertionsInEqualityComparisons02.ts(5,19): error TS2352: Type '"bar"' cannot be converted to type 'number'.
tests/cases/conformance/types/stringLiteral/stringLiteralsAssertionsInEqualityComparisons02.ts(6,9): error TS2365: Operator '===' cannot be applied to types '"foo"' and 'string & { enhancements: any; }'.
tests/cases/conformance/types/stringLiteral/stringLiteralsAssertionsInEqualityComparisons02.ts(6,20): error TS2352: Type '"bar"' cannot be converted to type 'string & { enhancements: any; }'.
  Type '"bar"' is not comparable to type '{ enhancements: any; }'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralsAssertionsInEqualityComparisons02.ts (7 errors) ====
    type EnhancedString = string & { enhancements: any };
    
    var a = "foo" === "bar" as "baz";
            ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types '"foo"' and '"baz"'.
                      ~~~~~~~~~~~~~~
!!! error TS2352: Type '"bar"' cannot be converted to type '"baz"'.
    var b = "foo" !== ("bar" as "foo");
                       ~~~~~~~~~~~~~~
!!! error TS2352: Type '"bar"' cannot be converted to type '"foo"'.
    var c = "foo" == (<number>"bar");
            ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types '"foo"' and 'number'.
                      ~~~~~~~~~~~~~
!!! error TS2352: Type '"bar"' cannot be converted to type 'number'.
    var d = "foo" === ("bar" as EnhancedString);
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types '"foo"' and 'string & { enhancements: any; }'.
                       ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Type '"bar"' cannot be converted to type 'string & { enhancements: any; }'.
!!! error TS2352:   Type '"bar"' is not comparable to type '{ enhancements: any; }'.